--- a/First-Html-page/personal-site-challenge.html
+++ b/First-Html-page/personal-site-challenge.html
@@ -1,29 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Personal Site Challenge </title>
-        <!-- Font Import -->
-        <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet"> -->
-        <!-- CSS Files -->
-    </head>
-    <body>
-        I'm a Dev Club Member.
-        a programmer 
-        Hello.
-        I am a Web Developer.And I ❤️ to code
-        My Skills.
-        Design & Development
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
-        Debugging
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
-        Get In Touch
-        If you love coding as much as I do.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci consectetur quisquam deleniti, molestiae reiciendis atque hic blanditiis suscipit voluptates harum ducimus, rerum alias! Quos cum, sequi molestiae itaque id sunt!
-        LinkedIn
-        Twitter
-        Website
-        © DevClub
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Personal Site Challenge </title>
+    <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
+
+
+
+    <!-- Font Import -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet"> -->
+    <!-- CSS Files -->
+</head>
+
+<body>
+    <div class="top-container">
+        <img class="top-cloud" src="asset/cloud.png" alt="cloud-img">
+        <h1>I'm a Dev Club Member.</h1>
+        <p>a <span class="pro">pro</span>grammer</p>
+        <img class="bottom-cloud" src="asset/cloud.png" alt="cloud-img">
+        <img src="asset/mountain.png" alt="mountain-img">
+    </div>
+
+
+    <div class="middle-container">
+        <div class="profile">
+            <img src="asset/Me.png" alt="Me-img">
+            <h2>Hello.</h2>
+            <p>I am a Web Developer.And I ❤️ to code.</p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="gif-programmer" src=" https://media.giphy.com/media/ZVik7pBtu9dNS/giphy.gif" alt="gif">
+                <h3>Design &amp; Development</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae
+                    necessitatibus
+                    impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla
+                    quaerat
+                    quas
+                    incidunt?.</p>
+            </div>
+            <div class="skill-row
+            ">
+                <img class="debugging" src=" https://media.giphy.com/media/ukMiDlCmdv2og/giphy.gif"
+                    alt="picture Debugging">
+                <h3>Debugging</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae
+                    
+                    impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla
+                    quaerat
+                    quas
+                    incidunt?.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>If you love coding as much as I do.</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci consectetur quisquam deleniti,
+                molestiae
+                reiciendis atque hic blanditiis suscipit voluptates harum ducimus, rerum alias! Quos cum, sequi
+                molestiae
+                itaque id sunt!</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
+    </div>
+
+
+
+
+    <div class="bottom-container">
+
+        <div class="bottom-container">
+            <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+            <a class="footer-link" href="https://twitter.com/">Twitter</a>
+            <a class="footer-link" href="https://www.Facebook.com/">Facebook</a>
+            <p>© DevClub</p>
+        </div>
+
+    </div>
+
+
+</body>
+
 </html>
